tests/macros/confirm/extension.stderr
error: option `extension` does not exist for kind `confirm`
 --> $DIR/extension.rs:2:45
  |
2 |     let q = requestty::questions![Confirm { extension: todo!() }];
  |                                             ^^^^^^^^^
