tests/macros/confirm/extension.rs
fn main() {
    let q = requestty::questions![Confirm { extension: todo!() }];
}
